2023-07-09T16:20:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5500823838 # 974
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-09
* notice: last 14d: unq all: 18 56
* notice: prev accum: outdated-unq outdated-all / unq all: 510 816 / 545 871
* notice: next accum: outdated-unq outdated-all / unq all: 510 816 / 546 873
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +3 +4 -0 -0 / 3 4
* notice: removed / changed dates: [] / [2023-07-09]

2023-07-09T08:19:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5498850829 # 973
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-09
* notice: last 14d: unq all: 17 54
* notice: prev accum: outdated-unq outdated-all / unq all: 510 816 / 543 869
* notice: next accum: outdated-unq outdated-all / unq all: 510 816 / 545 871
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-06-25 2023-07-09]

2023-07-09T01:52:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5497428124 # 972
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-09
* notice: last 14d: unq all: 17 53
* notice: prev accum: outdated-unq outdated-all / unq all: 510 816 / 542 868
* notice: next accum: outdated-unq outdated-all / unq all: 510 816 / 543 869
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [] / [2023-07-08]

2023-07-08T16:21:01Z: