@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-09T16:20:51Z",
-  "count_outdated" : 816,
-  "uniques_outdated" : 510,
-  "count" : 873,
+  "timestamp" : "2023-07-10T01:45:46Z",
+  "count_outdated" : 818,
+  "uniques_outdated" : 511,
+  "count" : 874,
   "uniques" : 546,
   "clones" : [
-    {
-      "timestamp": "2023-06-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-06-26T00:00:00Z",
       "count": 1,
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2023-07-09T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 2, 4 ],
-      "count_decinc": [ 0, 4 ],
+      "count": 5,
+      "count_minmax": [ 2, 5 ],
+      "count_decinc": [ 0, 5 ],
       "uniques": 3,
       "uniques_minmax": [ 2, 3 ],
       "uniques_decinc": [ 0, 3 ]
