@@ -3,11 +3,6 @@
   "uniques": 18,
   "clones": [
     {
-      "timestamp": "2023-06-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-06-26T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2023-07-09T00:00:00Z",
-      "count": 4,
+      "count": 5,
       "uniques": 3
     }
   ]
